--- a/gnome-virt-manager.spec.in
+++ b/gnome-virt-manager.spec.in
@@ -17,6 +17,7 @@ Requires: python
 Requires: pygtk2 >= 1.99.12-6
 Requires: gnome-python2-gconf >= 1.99.11-7
 Requires: libvirt-python >= 0.0.6
+Requires: python-matplotlib
 
 BuildArchitectures: noarch
 
